--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "celke",
+  "name": "api-node-with-mongo",
   "version": "1.0.0",
   "description": "'API com nodejs'",
   "main": "app.js",
   "scripts": {
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "'João Carlos Félix'",
@@ -11,10 +12,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^3.6.3",
-    "mongoose": "^5.11.14"
+    "mongodb": "^4.2.1",
+    "mongoose": "^6.0.14"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.15"
   }
 }
